--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <div id="popup" class="hidden">
         <div class="popup-content">
             <h3>Modifier les cadeaux</h3>
-            <ul id="prizeList">
-                <!-- Champs dynamiques pour les cadeaux -->
-            </ul>
+            <ul id="prizeList"></ul>
             <button id="saveButton">Enregistrer</button>
         </div>
     </div>
