--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <label for="gift3">Cadeau 3 :</label><input type="text" id="gift3" value="Cadeau 3"><br>
                 <label for="gift4">Cadeau 4 :</label><input type="text" id="gift4" value="Cadeau 4"><br>
                 <label for="gift5">Cadeau 5 :</label><input type="text" id="gift5" value="Cadeau 5"><br>
+                <label for="gift6">Cadeau 6 :</label><input type="text" id="gift6" value="Cadeau 6"><br>
                 <button type="button" id="saveButton">Sauvegarder</button>
             </form>
         </div>
