--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 </head>
 <body>
     <!-- Vidéo YouTube en arrière-plan -->
-    <iframe id="backgroundVideo" width="100%" height="100%" src="https://www.youtube.com/watch?v=WEBVdqHgMVA&list=PLiVDPajlpFZUc05R7sdyKSLjNznlP4hIT&index=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe id="backgroundVideo" width="100%" height="100%" src="https://www.youtube.com/watch?v=WEBVdqHgMVA&list=PLiVDPajlpFZUc05R7sdyKSLjNznlP4hIT" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
     <div class="container">
         <div class="wheels-container">
