--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
             align-items: center;
             flex-direction: column;
             height: 100vh;
-            background: url('Roue Noel.jpg') no-repeat center center fixed;
-            background-size: cover;
             font-family: Arial, sans-serif;
             position: relative;
         }
 
+        /* Vidéo en arrière-plan */
         #backgroundVideo {
             position: absolute;
             top: 0;
@@ -26,7 +25,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -1;        /* Vidéo en arrière-plan */
+            z-index: -1; /* Vidéo en arrière-plan */
         }
 
         .container {
@@ -138,8 +137,11 @@
     </style>
 </head>
 <body>
-    <!-- Vidéo YouTube en arrière-plan -->
-    <iframe id="backgroundVideo" width="100%" height="100%" src="https://www.youtube.com/watch?v=WEBVdqHgMVA&list=PLiVDPajlpFZUc05R7sdyKSLjNznlP4hIT" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <!-- Vidéo locale en arrière-plan -->
+    <video id="backgroundVideo" autoplay loop muted>
+        <source src="video.mp4" type="video/mp4">
+        Votre navigateur ne prend pas en charge la balise vidéo.
+    </video>
 
     <div class="container">
         <div class="wheels-container">
